# schema-org-file-system

./: .coverage  .gitignore  .mcp.json  .ralph-task.md  ALIGNMENT_QUICK_REFERENCE.md  CLAUDE.md  CLIP_BATCH_IMPL_PLAN.md  IMPLEMENTATION_EXAMPLES.md  README.md  RECOMMENDATIONS_APPLIED.md  REFACTORING_GUIDE.md  REFACTORING_INDEX.md  REFACTORING_SUMMARY.md  SCHEMA_ORG_ALIGNMENT.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  repomix-output.xml  repomix.config.json  requirements.txt  tsconfig.json
.ast-grep-backups/backup-20260301-140124-879/: backup-metadata.json
.ast-grep-backups/backup-20260301-140749-747/: backup-metadata.json
.claude/: settings.json
.serena/: project.yml
_site/: correction_interface.html  cost_report.json  index.html  metadata_viewer.html  ml_data_explorer.html  timeline.html  timeline_data.json
docs/: ARCHITECTURE.md  BACKLOG.md  D1_MIGRATION.md  D1_QUICKSTART.md  D1_README.md  README_BACKUP.md  README_TIMELINE.md  SCHEMA_ORG_ARCHITECTURE.md  deep-learning-analysis-03-27-2026.md  papers-to-research.txt
docs/archive/: TEST_AND_REFACTOR_PLAN.md
docs/plans/: route-to-integrity-studio.md
docs/repomix/: INTEGRATION_GUIDE.md  README.md  gitlog-top20.txt  repo-compressed.xml  repomix-docs.xml  repomix-git-ranked.xml  repomix.xml  token-tree.txt
docs/roadmap/: README.md
results/: downloads_organization_log.txt
scripts/: add_content_descriptions.py  analyze_renamed_files.py  collect_kie_training_data.py  data_preprocessing.py  evaluate_model.py  file_organizer.py  file_organizer_by_type.py  file_organizer_content_based.py  generate_timeline_data.py  image_content_analyzer.py  image_content_renamer.py  image_renamer_metadata.py  launch_timeline.sh  merge_labeled_data.py  migrate_ids.py  organize_by_content.py  organize_to_existing.py  screenshot_renamer.py  train_kie_model.py  update_report_with_labels.py
scripts/d1/: export_to_d1.py  schema.sql
scripts/repomix/: deploy-traditional-server.sh  find_duplication.sh  find_large_classes.sh  generate-diff-summary.sh  generate-repomix-docs.sh  generate-repomix-git-ranked.sh  generate-repomix.sh  generate-sidequest-gitlog.sh  generate-token-tree.sh  replace-magic.sh  repo-compressed.sh  repomix-docs.config.json  repomix-regen.sh  run-python-tests.sh  verify-bugfixes.sh  warm-doppler-cache.sh
scripts/shared/: __init__.py  clip_cache.py  clip_utils.py  constants.py  db_utils.py  file_ops.py  kie_schema_mapping.py  kie_utils.py  ocr_utils.py
src/: cli.py  constants.py  cost_integration.py  cost_roi_calculator.py  enrichment.py  error_tracking.py  generators.py  health_check.py  uri_utils.py  validator.py
src/analyzers/: __init__.py  image_analyzer.py  image_metadata.py  text_extractor.py
src/api/: schema_org_api.py  schema_org_models.py  timeline_api.py
src/classifiers/: __init__.py  content_classifier.py
src/organizers/: __init__.py  base_organizer.py  content_organizer.py
src/pipeline/: __init__.py  batch_processor.py  file_processor.py
src/storage/: graph_store.py  graph_store_http.py  kv_store.py  migration.py  mime_mapping.py  models.py  schema_org_base.py  schema_org_builders.py  schema_org_context.py  schema_org_exporter.py  schema_org_types.py  schema_org_variants.py
src/tests/: test_schema_org_serialization.py
src/utils/: __init__.py  tracking.py
tests/e2e/: correction-interface.spec.ts  dashboard.spec.ts  global-setup.ts  global-teardown.ts  metadata-viewer.spec.ts  timeline.spec.ts
tests/fixtures/: sample_audio_meta.json  sample_code_analysis.json  sample_dataset_info.json  sample_document_props.json  sample_exif.json  sample_nlp_results.json  sample_video_meta.json
tests/unit/: test_base.py  test_shared.py  (+15 more)
(+26 files in other folders)
