[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-org-file-system"
version = "1.3.0"
description = "AI-powered file organization using CLIP vision, OCR, and Schema.org metadata"
readme = "CLAUDE.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alyshia Ledlie"}
]
keywords = [
    "file-organization",
    "schema-org",
    "ai",
    "clip",
    "ocr",
    "metadata"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (required for basic functionality)
dependencies = [
    "Pillow>=12.1.0",
    "pillow-heif>=1.3.0",
    "piexif>=1.1.3",
    "pytesseract>=0.3.13",
    "geopy>=2.4.1",
    "SQLAlchemy>=2.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
# AI/ML features (CLIP vision classification)
ai = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.30.0",
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
]

# Document processing
docs = [
    "python-docx>=1.1.0",
    "pypdf>=5.0.0",
    "PyPDF2>=3.0.1",
    "pdf2image>=1.17.0",
    "openpyxl>=3.1.0",
    "lxml>=6.0.0",
]

# Error tracking and monitoring
monitoring = [
    "sentry-sdk>=2.0.0",
]

# All optional features
all = [
    "schema-org-file-system[ai,docs,monitoring]",
]

# Development dependencies
dev = [
    "pytest>=9.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.5.0",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.92.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.scripts]
organize-files = "src.cli:main"

[project.urls]
Homepage = "https://github.com/aledlie/schema-org-file-system"
Repository = "https://github.com/aledlie/schema-org-file-system.git"
Issues = "https://github.com/aledlie/schema-org-file-system/issues"

[tool.setuptools]
packages = ["src", "src.storage"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | node_modules
    | results
    | _site
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "build", "dist", "node_modules", "results", "_site"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "results",
    "_site",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
